Added new user creation step
